[tool.poetry]
name = "deepquant"
version = "0.1.0"
description = ""
authors = ["Anatoly Bugakov <anatoly.bugakov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
